--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy": "node deploy.js"
   },
-  "homepage": "https://Dxd5642.github.io/UltraDentDeploy",
   "dependencies": {
     "react": "^19.1.1",
+    "gh-pages": "^6.3.0",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
